     they get skipped. [issue #3011]

 - `usbhid-ups` driver updates:
   * Added support for "fun"/"nuf" methods called from mapping tables to
     report back to the driver that an argument value was not supported,
     so `setvar()` or `instcmd()` can not proceed safely and should return
     `STAT_SET_CONVERSION_FAILED` or `STAT_INSTCMD_CONVERSION_FAILED`. [#3017]
   * The `cps-hid` subdriver's existing mechanism for fixing broken report
     descriptors was extended to cover a newly reported case of nominal UPS
     power being incorrectly reported due to an unrealistically low maximum
     threshold, as seen with a EC850LCD device. [issue #2917, PR #2919]
   * Further revision of "ECO mode" related code in `mge-hid` subdriver,
     following up from work started for NUT v2.8.3 release. [PR #2956]
   * Added APC BVKxxxM2 and BKxxxM2-CH to list of devices where
     `lbrb_log_delay_sec=N` may be necessary to address spurious LOWBATT
     and REPLACEBATT events. [PR #2942, PR #3007, issue #2347, issue #3006]

 - New NUT drivers:
   * Introduced a `ve-direct` driver for Victron Energy UPS/solar panels
     monitoring. Most specific reported values are in an `experimental.*`
     namespace, as a community we need to come up with standard naming for
     those via `docs/nut-names.txt`. [#440]
   * Introduced a `nutdrv_hashx` driver for numerous devices from Ablerex,
     Atlantis Land, Epyc, Infosec, ION, PowerWalker, Right Power Technology,
     Salicru, UPS Solutions and other vendors (originally shipped with a
     "PowerMaster+", "PowerMaster" or "PowerGuide" software companion suite).
     This seems to be a protocol developed by Cyber Energy for serial-port
     devices, subsequently used by different vendors in their own products
     or re-branded Cyber Energy creations. [#2940]
   * Introduced a `failover` driver for monitoring multiple UPS driver sockets
     and seamless switching out of UPS data in a failover situation, includes