@@ -185,6 +185,9 @@ https://github.com/networkupstools/nut/milestone/9
      report back to the driver that an argument value was not supported,
      so `setvar()` or `instcmd()` can not proceed safely and should return
      `STAT_SET_CONVERSION_FAILED` or `STAT_INSTCMD_CONVERSION_FAILED`. [#3017]
+   * `hid_ups_walk(HU_WALKMODE_INIT)`: report if exactly one of "fun" or "nuf"
+     dynamic value mapping methods is defined in a one-line table, and this
+     may preclude reads/writes of that variable. [#2956]
    * The `cps-hid` subdriver's existing mechanism for fixing broken report
      descriptors was extended to cover a newly reported case of nominal UPS
      power being incorrectly reported due to an unrealistically low maximum
